<resources>
    <string name="app_name">FAYE Study Helper</string>
    <string name="title_home">Home</string>
    <string name="title_studytips">Study Tips</string>
    <string name="title_stats">Your Study Statistics</string>
    <string name="title_tasks">Your Tasks</string>
    <string name="title_mentalhealth">Mental Health</string>
    <!--home page-->
    <string name="app_description">FAYE Study Helper is a student’s best friend. It will keep track of your tasks, allow you to keep track of your mood, check how long you have been studying, give you daily tips, and more.</string>
    <string name="logo_description">FAYE Logo</string>
    <!--study stats-->
    <string name="enter_stat_title">Enter how many hours you have studied today. </string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="enter">Enter</string>
    <string name="statistics">Study Stats</string>
    <!--study tips-->
    <string name="pomodoro_title">The Pomodoro Technique</string>
    <string name="pomodoro_info">Invented by the Italian Francesco Cirillo, the Pomodoro Technique works by having a person work for 25 to 30 minute periods and then take breaks of 2-3 minutes. After four such sessions, the person takes a longer break. Having 25 minute work periods allows one to get some work done without feeling overwhelmed or burnt out. Of course, the exact number of minutes for the work time and break time will vary per person.</string>
    <string name="tipofday_title">Study Tip of the Day</string>
    <string name="tipofday_content">Click Here to See The Daily Study Tip</string>
    <!--mental health-->
    <string name="quote_of_day">Click Here to See the Quote of the Day</string>
    <string name="mental_health_tip">Click Here to See the Mental Health Tip of the Day</string>
    <string name="mood_tracker_title">Mood Tracker: choose how you are feeling today</string>
    <string name="fantastic">Fantastic</string>
    <string name="pretty_good">Pretty good</string>
    <string name="meh">In between</string>
    <string name="little_down">A bit down</string>
    <string name="really_sad">Having a rough day</string>
    <string name="check_moods">Check your mood in the past week</string>
    <string name="display_moods_title">Here is how you have felt in the past week</string>
    <string name="display_moods_disclaimer">Note that if you did not track your mood on a day, it will show as blank</string>
    <string name="display_average">Here is your average mood in the past week!</string>
    <string name="sad">Sad</string>
    <string name="happy">Happy</string>
    <!--tasks-->
    <string name="choose_date">Select a date (in MM/dd/yyyy format): </string>
    <string name="task_list">Tasks for today</string>
    <string name="add_task">Add a task to the selected date: </string>
    <string name="remove_task">Enter the task number to remove from this date: </string>
    <string name="select">Select</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
</resources>