<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_studytips"
        android:icon="@drawable/ic_study_tips"
        android:title="@string/title_studytips" />
    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/statistics" />
    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_to_do"
        android:title="@string/title_tasks" />
    <item
        android:id="@+id/navigation_mentalhealth"
        android:icon="@drawable/ic_mental"
        android:title="@string/title_mentalhealth" />


</menu>