<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mentalhealth.MentalHealthFragment">

    <TextView
        android:id="@+id/mental_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text=""
        android:textSize="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moodtrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/mood_tracker_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentaltip" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fan"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/fantastic"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/pg"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodtrack" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pg"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/pretty_good"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/inbet"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/fan"
        app:layout_constraintTop_toBottomOf="@+id/moodtrack"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/inbet"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/meh"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/pg"
        app:layout_constraintTop_toBottomOf="@+id/moodtrack" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/see_results"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:onClick="displayMoods"
        android:text="@string/check_moods"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bad2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mentaltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="30dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:onClick="loadMental"
        android:text="@string/mental_health_tip"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quote" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="30dp"
        android:background="@color/purple_500"
        android:onClick="loadQuote"
        android:text="@string/quote_of_day"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mental_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bad1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24sp"
        android:background="@color/purple_500"
        android:text="@string/little_down"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/bad2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pg" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bad2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/really_sad"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bad1"
        app:layout_constraintTop_toBottomOf="@+id/pg" />

</androidx.constraintlayout.widget.ConstraintLayout>