<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stats.StatsFragment">

    <com.github.mikephil.charting.charts.HorizontalBarChart
        android:id="@+id/hoursChart"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterHoursTwo" />

    <TextView
        android:id="@+id/hoursStudied"
        android:layout_width="68dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/subtractHour"
        app:layout_constraintTop_toBottomOf="@+id/enterHoursTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enterHours"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:background="@color/purple_500"
        android:text="@string/enter"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/addHour"
        app:layout_constraintTop_toBottomOf="@+id/enterHoursTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addHour"
        android:layout_width="44dp"
        android:layout_height="47dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:background="@color/purple_500"
        android:text="@string/plus"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/hoursStudied"
        app:layout_constraintTop_toBottomOf="@+id/enterHoursTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/subtractHour"
        android:layout_width="44dp"
        android:layout_height="47dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="24dp"
        android:background="@color/purple_500"
        android:text="@string/minus"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/hoursStudied"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterHoursTitle" />

    <TextView
        android:id="@+id/enterHoursTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/title_stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/averageStudy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="TextView"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.401"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursChart" />

    <TextView
        android:id="@+id/enterHoursTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:text="@string/enter_stat_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursStudied" />

</androidx.constraintlayout.widget.ConstraintLayout>